Adding the index.html file

--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
     <head>
         <title>Cursed Pong</title>
         <meta charset="utf-8">
+        <style>
+            body {
+                font-family: sans-serif;
+            }
+        </style>
     </head>
     <body>
-        <h1>Hello, World!</h1>
+        <h1>Cursed Pong</h1>
+        <h3><a href="https://cursedpongdevs.github.io/cursed_pong/install/windows.exe">Windows download</a></h3>
+        <h3><a href="https://cursedpongdevs.github.io/cursed_pong/install/macos.app">MacOS download</a></h3>
+        <h3>Linux download coming soon</h3>
     </body>
 </html>
