Changing the index.html file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <h1>Cursed Pong</h1>
         <h3><a href="https://cursedpongdevs.github.io/cursed_pong/install/windows.exe">Windows download</a></h3>
-        <h3><a href="https://cursedpongdevs.github.io/cursed_pong/install/macos.app">MacOS download</a></h3>
+        <h3><a href="https://cursedpongdevs.github.io/cursed_pong/install/macos.zip">MacOS download</a></h3>
         <h3>Linux download coming soon</h3>
     </body>
 </html>
