Updating the index.html file

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     </head>
     <body>
         <h1>Cursed Pong</h1>
-        <h3>Download and run the installer for your oeprating system</h3>>
-        <h3><a href="https://narwhal-studios.github.io/Cursed-Pong/install/windows.exe">Windows download</a></h3>
-        <h3><a href="https://narwhal-studios.github.io/Cursed-Pong/install/macos">MacOS download</a></h3>
+        <h3>Download and run the installer for your operating system</h3>
+        <h3><a href="https://narwhal-studios.github.io/Cursed-Pong/files/windows.exe">Windows download</a></h3>
+        <h3><a href="https://narwhal-studios.github.io/Cursed-Pong/files/macos">MacOS download</a></h3>
         <h3>Linux download coming soon</h3>
     </body>
 </html>
