--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
         </style>
     </head>
     <body>
-        <h1>Cursed Pong</h1>
+        <h1>Cursed Pong</h1><hr>
         <h3>Download and run the installer for your operating system</h3>
         <h3><a href="https://narwhal-studios.github.io/Cursed-Pong/files/windows.exe">Windows download</a></h3>
-        <h3><a href="https://narwhal-studios.github.io/Cursed-Pong/files/macos">MacOS download</a></h3>
+        <h3><a href="https://narwhal-studios.github.io/Cursed-Pong/files/macos.dmg">MacOS download</a></h3>
+        <h6>For MacOS after downloading, run this command: <span>open ~/Downloads/macos.app</span></h6>
         <h3>Linux download coming soon</h3>
     </body>
 </html>
